--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.*
+.env
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -12,6 +13,7 @@
 
 # testing
 /coverage
+
 
 # next.js
 /.next/
