--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sharp": "^0.33.5",
     "sitemap": "^8.0.0",
     "stream": "^0.0.3",
+    "twilio": "^5.6.0",
     "uniqid": "^5.4.0",
     "xlsx": "^0.18.5"
   }
